projects/sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: %empty
    5          | declaracao_variaveis

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    7                     | tipo lista_variaveis

    8 tipo: T_INTEIRO
    9     | T_LOGICO

   10 $@2: %empty

   11 lista_variaveis: lista_variaveis T_IDENTIF $@2 tamanho

   12 $@3: %empty

   13 lista_variaveis: T_IDENTIF $@3 tamanho

   14 tamanho: T_ABRECOL T_NUMERO T_FECHACOL
   15        | %empty

   16 lista_comandos: %empty
   17               | comando lista_comandos

   18 comando: leitura
   19        | escrita
   20        | repeticao
   21        | selecao
   22        | atribuicao

   23 $@4: %empty

   24 leitura: T_LEIA T_IDENTIF $@4 indice

   25 escrita: T_ESCREVA expr

   26 $@5: %empty

   27 $@6: %empty

   28 repeticao: T_ENQTO $@5 expr T_FACA $@6 lista_comandos T_FIMENQTO

   29 $@7: %empty

   30 $@8: %empty

   31 repeticao: T_REPITA $@7 lista_comandos T_ATE expr $@8 T_FIMREPITA

   32 $@9: %empty

   33 $@10: %empty

   34 selecao: T_SE expr T_ENTAO $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

   35 $@11: %empty

   36 atribuicao: T_IDENTIF $@11 indice T_ATRIB expr

   37 indice: T_ABRECOL expr T_FECHACOL
   38       | %empty

   39 expr: expr T_VEZES expr
   40     | expr T_DIV expr
   41     | expr T_MAIS expr
   42     | expr T_MENOS expr
   43     | expr T_MAIOR expr
   44     | expr T_MENOR expr
   45     | expr T_IGUAL expr
   46     | expr T_E expr
   47     | expr T_OU expr
   48     | termo

   49 $@12: %empty

   50 termo: T_IDENTIF $@12 indice
   51      | T_NUMERO
   52      | T_V
   53      | T_F
   54      | T_NAO termo
   55      | T_ABRE expr T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 3
    T_INICIO (259) 2
    T_FIM (260) 2
    T_IDENTIF (261) 3 11 13 24 36 50
    T_ATRIB (262) 36
    T_LEIA (263) 24
    T_ESCREVA (264) 25
    T_SE (265) 34
    T_ENTAO (266) 34
    T_SENAO (267) 34
    T_FIMSE (268) 34
    T_VEZES (269) 39
    T_DIV (270) 40
    T_MAIS (271) 41
    T_MENOS (272) 42
    T_IGUAL (273) 45
    T_MAIOR (274) 43
    T_MENOR (275) 44
    T_E (276) 46
    T_OU (277) 47
    T_V (278) 52
    T_F (279) 53
    T_NAO (280) 54
    T_NUMERO (281) 14 51
    T_ABRECOL (282) 14 37
    T_FECHACOL (283) 14 37
    T_ABRE (284) 55
    T_FECHA (285) 55
    T_INTEIRO (286) 8
    T_LOGICO (287) 9
    T_ENQTO (288) 28
    T_FACA (289) 28
    T_FIMENQTO (290) 28
    T_REPITA (291) 31
    T_ATE (292) 31
    T_FIMREPITA (293) 31


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    programa (40)
        on left: 2
        on right: 0
    $@1 (41)
        on left: 1
        on right: 2
    cabecalho (42)
        on left: 3
        on right: 2
    variaveis (43)
        on left: 4 5
        on right: 2
    declaracao_variaveis (44)
        on left: 6 7
        on right: 5 6
    tipo (45)
        on left: 8 9
        on right: 6 7
    lista_variaveis (46)
        on left: 11 13
        on right: 6 7 11
    $@2 (47)
        on left: 10
        on right: 11
    $@3 (48)
        on left: 12
        on right: 13
    tamanho (49)
        on left: 14 15
        on right: 11 13
    lista_comandos (50)
        on left: 16 17
        on right: 2 17 28 31 34
    comando (51)
        on left: 18 19 20 21 22
        on right: 17
    leitura (52)
        on left: 24
        on right: 18
    $@4 (53)
        on left: 23
        on right: 24
    escrita (54)
        on left: 25
        on right: 19
    repeticao (55)
        on left: 28 31
        on right: 20
    $@5 (56)
        on left: 26
        on right: 28
    $@6 (57)
        on left: 27
        on right: 28
    $@7 (58)
        on left: 29
        on right: 31
    $@8 (59)
        on left: 30
        on right: 31
    selecao (60)
        on left: 34
        on right: 21
    $@9 (61)
        on left: 32
        on right: 34
    $@10 (62)
        on left: 33
        on right: 34
    atribuicao (63)
        on left: 36
        on right: 22
    $@11 (64)
        on left: 35
        on right: 36
    indice (65)
        on left: 37 38
        on right: 24 36 50
    expr (66)
        on left: 39 40 41 42 43 44 45 46 47 48
        on right: 25 28 31 34 36 37 39 40 41 42 43 44 45 46 47 55
    termo (67)
        on left: 50 51 52 53 54 55
        on right: 48 54
    $@12 (68)
        on left: 49
        on right: 50


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 programa: cabecalho . variaveis $@1 T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 4 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 3 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    8 tipo: T_INTEIRO .

    $default  reduce using rule 8 (tipo)


State 7

    9 tipo: T_LOGICO .

    $default  reduce using rule 9 (tipo)


State 8

    2 programa: cabecalho variaveis . $@1 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 11


State 9

    5 variaveis: declaracao_variaveis .

    $default  reduce using rule 5 (variaveis)


State 10

    6 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    7                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    2 programa: cabecalho variaveis $@1 . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 14


State 12

   13 lista_variaveis: T_IDENTIF . $@3 tamanho

    $default  reduce using rule 12 ($@3)

    $@3  go to state 15


State 13

    6 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    7                     | tipo lista_variaveis .
   11 lista_variaveis: lista_variaveis . T_IDENTIF $@2 tamanho

    T_IDENTIF  shift, and go to state 16
    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 7 (declaracao_variaveis)

    declaracao_variaveis  go to state 17
    tipo                  go to state 10


State 14

    2 programa: cabecalho variaveis $@1 T_INICIO . lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 18
    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_SE       shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_REPITA   shift, and go to state 23

    $default  reduce using rule 16 (lista_comandos)

    lista_comandos  go to state 24
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 15

   13 lista_variaveis: T_IDENTIF $@3 . tamanho

    T_ABRECOL  shift, and go to state 31

    $default  reduce using rule 15 (tamanho)

    tamanho  go to state 32


State 16

   11 lista_variaveis: lista_variaveis T_IDENTIF . $@2 tamanho

    $default  reduce using rule 10 ($@2)

    $@2  go to state 33


State 17

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 6 (declaracao_variaveis)


State 18

   36 atribuicao: T_IDENTIF . $@11 indice T_ATRIB expr

    $default  reduce using rule 35 ($@11)

    $@11  go to state 34


State 19

   24 leitura: T_LEIA . T_IDENTIF $@4 indice

    T_IDENTIF  shift, and go to state 35


State 20

   25 escrita: T_ESCREVA . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 42
    termo  go to state 43


State 21

   34 selecao: T_SE . expr T_ENTAO $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 44
    termo  go to state 43


State 22

   28 repeticao: T_ENQTO . $@5 expr T_FACA $@6 lista_comandos T_FIMENQTO

    $default  reduce using rule 26 ($@5)

    $@5  go to state 45


State 23

   31 repeticao: T_REPITA . $@7 lista_comandos T_ATE expr $@8 T_FIMREPITA

    $default  reduce using rule 29 ($@7)

    $@7  go to state 46


State 24

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 47


State 25

   17 lista_comandos: comando . lista_comandos

    T_IDENTIF  shift, and go to state 18
    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_SE       shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_REPITA   shift, and go to state 23

    $default  reduce using rule 16 (lista_comandos)

    lista_comandos  go to state 48
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 26

   18 comando: leitura .

    $default  reduce using rule 18 (comando)


State 27

   19 comando: escrita .

    $default  reduce using rule 19 (comando)


State 28

   20 comando: repeticao .

    $default  reduce using rule 20 (comando)


State 29

   21 comando: selecao .

    $default  reduce using rule 21 (comando)


State 30

   22 comando: atribuicao .

    $default  reduce using rule 22 (comando)


State 31

   14 tamanho: T_ABRECOL . T_NUMERO T_FECHACOL

    T_NUMERO  shift, and go to state 49


State 32

   13 lista_variaveis: T_IDENTIF $@3 tamanho .

    $default  reduce using rule 13 (lista_variaveis)


State 33

   11 lista_variaveis: lista_variaveis T_IDENTIF $@2 . tamanho

    T_ABRECOL  shift, and go to state 31

    $default  reduce using rule 15 (tamanho)

    tamanho  go to state 50


State 34

   36 atribuicao: T_IDENTIF $@11 . indice T_ATRIB expr

    T_ABRECOL  shift, and go to state 51

    $default  reduce using rule 38 (indice)

    indice  go to state 52


State 35

   24 leitura: T_LEIA T_IDENTIF . $@4 indice

    $default  reduce using rule 23 ($@4)

    $@4  go to state 53


State 36

   50 termo: T_IDENTIF . $@12 indice

    $default  reduce using rule 49 ($@12)

    $@12  go to state 54


State 37

   52 termo: T_V .

    $default  reduce using rule 52 (termo)


State 38

   53 termo: T_F .

    $default  reduce using rule 53 (termo)


State 39

   54 termo: T_NAO . termo

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    termo  go to state 55


State 40

   51 termo: T_NUMERO .

    $default  reduce using rule 51 (termo)


State 41

   55 termo: T_ABRE . expr T_FECHA

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 56
    termo  go to state 43


State 42

   25 escrita: T_ESCREVA expr .
   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_VEZES  shift, and go to state 57
    T_DIV    shift, and go to state 58
    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_IGUAL  shift, and go to state 61
    T_MAIOR  shift, and go to state 62
    T_MENOR  shift, and go to state 63
    T_E      shift, and go to state 64
    T_OU     shift, and go to state 65

    $default  reduce using rule 25 (escrita)


State 43

   48 expr: termo .

    $default  reduce using rule 48 (expr)


State 44

   34 selecao: T_SE expr . T_ENTAO $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE
   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr

    T_ENTAO  shift, and go to state 66
    T_VEZES  shift, and go to state 57
    T_DIV    shift, and go to state 58
    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_IGUAL  shift, and go to state 61
    T_MAIOR  shift, and go to state 62
    T_MENOR  shift, and go to state 63
    T_E      shift, and go to state 64
    T_OU     shift, and go to state 65


State 45

   28 repeticao: T_ENQTO $@5 . expr T_FACA $@6 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 67
    termo  go to state 43


State 46

   31 repeticao: T_REPITA $@7 . lista_comandos T_ATE expr $@8 T_FIMREPITA

    T_IDENTIF  shift, and go to state 18
    T_LEIA     shift, and go to state 19
    T_ESCREVA  shift, and go to state 20
    T_SE       shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_REPITA   shift, and go to state 23

    $default  reduce using rule 16 (lista_comandos)

    lista_comandos  go to state 68
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 47

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 2 (programa)


State 48

   17 lista_comandos: comando lista_comandos .

    $default  reduce using rule 17 (lista_comandos)


State 49

   14 tamanho: T_ABRECOL T_NUMERO . T_FECHACOL

    T_FECHACOL  shift, and go to state 69


State 50

   11 lista_variaveis: lista_variaveis T_IDENTIF $@2 tamanho .

    $default  reduce using rule 11 (lista_variaveis)


State 51

   37 indice: T_ABRECOL . expr T_FECHACOL

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 70
    termo  go to state 43


State 52

   36 atribuicao: T_IDENTIF $@11 indice . T_ATRIB expr

    T_ATRIB  shift, and go to state 71


State 53

   24 leitura: T_LEIA T_IDENTIF $@4 . indice

    T_ABRECOL  shift, and go to state 51

    $default  reduce using rule 38 (indice)

    indice  go to state 72


State 54

   50 termo: T_IDENTIF $@12 . indice

    T_ABRECOL  shift, and go to state 51

    $default  reduce using rule 38 (indice)

    indice  go to state 73


State 55

   54 termo: T_NAO termo .

    $default  reduce using rule 54 (termo)


State 56

   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr
   55 termo: T_ABRE expr . T_FECHA

    T_VEZES  shift, and go to state 57
    T_DIV    shift, and go to state 58
    T_MAIS   shift, and go to state 59
    T_MENOS  shift, and go to state 60
    T_IGUAL  shift, and go to state 61
    T_MAIOR  shift, and go to state 62
    T_MENOR  shift, and go to state 63
    T_E      shift, and go to state 64
    T_OU     shift, and go to state 65
    T_FECHA  shift, and go to state 74


State 57

   39 expr: expr T_VEZES . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 75
    termo  go to state 43


State 58

   40 expr: expr T_DIV . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 76
    termo  go to state 43


State 59

   41 expr: expr T_MAIS . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 77
    termo  go to state 43


State 60

   42 expr: expr T_MENOS . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 78
    termo  go to state 43


State 61

   45 expr: expr T_IGUAL . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 79
    termo  go to state 43


State 62

   43 expr: expr T_MAIOR . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 80
    termo  go to state 43


State 63

   44 expr: expr T_MENOR . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 81
    termo  go to state 43


State 64

   46 expr: expr T_E . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 82
    termo  go to state 43


State 65

   47 expr: expr T_OU . expr

    T_IDENTIF  shift, and go to state 36
    T_V        shift, and go to state 37
    T_F        shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_NUMERO   shift, and go to state 40
    T_ABRE     shift, and go to state 41

    expr   go to state 83
    termo  go to state 43


State 66

   34 selecao: T_SE expr T_ENTAO . $@9 lista_comandos T_SENAO $@10 lista_comandos T_FIMSE

    $default  reduce using rule 32 ($@9)

    $@9  go to state 84


State 67

   28 repeticao: T_ENQTO $@5 expr . T_FACA $@6 lista_comandos T_FIMENQTO
   39 expr: expr . T_VEZES expr
   40     | expr . T_DIV expr
   41     | expr . T_MAIS expr
   42     | expr . T_MENOS expr
   43     | expr . T_MAIOR expr
   44     | expr . T_MENOR expr
   45     | expr . T_IGUAL expr
   46     | expr . T_E expr
   47     | expr . T_OU expr
